# finnacial_agent

./: pyproject.toml
controllers/: agents.py  ask.py  stockAgent.py  stockNews.py  topStocks.py
routes/: agentRoutes.py  stockRoutes.py
scripts/: ping.js
